# pokeplatinum

./: .gitignore  INSTALL.md
res/battle/moves/: meson.build
res/battle/moves/accelerock/: data.json
res/battle/moves/acid_spray/: data.json
res/battle/moves/acrobatics/: data.json
res/battle/moves/aeroblast/: data.json
res/battle/moves/after_you/: data.json
res/battle/moves/air_cutter/: data.json
res/battle/moves/air_slash/: data.json
res/battle/moves/aqua_cutter/: data.json
res/battle/moves/aqua_tail/: data.json
res/battle/moves/armor_cannon/: data.json
res/battle/moves/aura_sphere/: data.json
res/battle/moves/blaze_kick/: data.json
res/battle/moves/blizzard/: data.json
res/battle/moves/bone_club/: data.json
res/battle/moves/bonemerang/: data.json
res/battle/moves/boomburst/: data.json
res/battle/moves/bounce/: data.json
res/battle/moves/breaking_swipe/: data.json
res/battle/moves/bulldoze/: data.json
res/battle/moves/charge_beam/: data.json
res/battle/moves/chatter/: data.json
res/battle/moves/chilling_water/: data.json
res/battle/moves/chilly_reception/: data.json
res/battle/moves/clamp/: data.json
res/battle/moves/clear_smog/: data.json
res/battle/moves/comet_punch/: data.json
res/battle/moves/covet/: data.json
res/battle/moves/crabhammer/: data.json
res/battle/moves/cross_chop/: data.json
res/battle/moves/cut/: data.json
res/battle/moves/defog/: data.json
res/battle/moves/dire_claw/: data.json
res/battle/moves/disable/: data.json
res/battle/moves/double_hit/: data.json
res/battle/moves/double_slap/: data.json
res/battle/moves/draco_meteor/: data.json
res/battle/moves/dragon_darts/: data.json
res/battle/moves/dragon_pulse/: data.json
res/battle/moves/dragon_rush/: data.json
res/battle/moves/drain_punch/: data.json
res/battle/moves/drill_run/: data.json
res/battle/moves/dual_chop/: data.json
res/battle/moves/dual_wingbeat/: data.json
res/battle/moves/electro_ball/: data.json
res/battle/moves/electro_shot/: data.json
res/battle/moves/electroweb/: data.json
res/battle/moves/embargo/: data.json
res/battle/moves/encore/: data.json
res/battle/moves/entrainment/: data.json
res/battle/moves/feint/: data.json
res/battle/moves/final_gambit/: data.json
res/battle/moves/fire_fang/: data.json
res/battle/moves/fire_lash/: data.json
res/battle/moves/fire_spin/: data.json
res/battle/moves/first_impression/: data.json
res/battle/moves/flame_charge/: data.json
res/battle/moves/flip_turn/: data.json
res/battle/moves/fly/: data.json
res/battle/moves/foresight/: data.json
res/battle/moves/forests_curse/: data.json
res/battle/moves/foul_play/: data.json
res/battle/moves/freeze_dry/: data.json
res/battle/moves/frenzy_plant/: data.json
res/battle/moves/frost_breath/: data.json
res/battle/moves/fury_cutter/: data.json
res/battle/moves/fury_swipes/: data.json
res/battle/moves/future_sight/: data.json
res/battle/moves/giga_drain/: data.json
res/battle/moves/giga_impact/: data.json
res/battle/moves/guard_swap/: data.json
res/battle/moves/gunk_shot/: data.json
res/battle/moves/hammer_arm/: data.json
res/battle/moves/headlong_rush/: data.json
res/battle/moves/heal_block/: data.json
res/battle/moves/heal_pulse/: data.json
res/battle/moves/heart_swap/: data.json
res/battle/moves/heat_wave/: data.json
res/battle/moves/heavy_slam/: data.json
res/battle/moves/hex/: data.json
res/battle/moves/hi_jump_kick/: data.json
res/battle/moves/high_horsepower/: data.json
res/battle/moves/horn_leech/: data.json
res/battle/moves/hurricane/: data.json
res/battle/moves/hydro_cannon/: data.json
res/battle/moves/hyper_beam/: data.json
res/battle/moves/hyper_fang/: data.json
res/battle/moves/hypnosis/: data.json
res/battle/moves/ice_fang/: data.json
res/battle/moves/ice_hammer/: data.json
res/battle/moves/icicle_crash/: data.json
res/battle/moves/icy_wind/: data.json
res/battle/moves/incinerate/: data.json
res/battle/moves/infestation/: data.json
res/battle/moves/iron_tail/: data.json
res/battle/moves/jaw_lock/: data.json
res/battle/moves/jump_kick/: data.json
res/battle/moves/leaf_storm/: data.json
res/battle/moves/leech_life/: data.json
res/battle/moves/lick/: data.json
res/battle/moves/life_dew/: data.json
res/battle/moves/liquidation/: data.json
res/battle/moves/low_sweep/: data.json
res/battle/moves/magic_powder/: data.json
res/battle/moves/magma_storm/: data.json
res/battle/moves/magnitude/: data.json
res/battle/moves/mat_block/: data.json
res/battle/moves/mega_kick/: data.json
res/battle/moves/mega_punch/: data.json
res/battle/moves/megahorn/: data.json
res/battle/moves/metal_claw/: data.json
res/battle/moves/meteor_mash/: data.json
res/battle/moves/mind_reader/: data.json
res/battle/moves/miracle_eye/: data.json
res/battle/moves/mirror_shot/: data.json
res/battle/moves/mud_bomb/: data.json
res/battle/moves/mud_shot/: data.json
res/battle/moves/muddy_water/: data.json
res/battle/moves/mystical_fire/: data.json
res/battle/moves/nature_power/: data.json
res/battle/moves/nuzzle/: data.json
res/battle/moves/octazooka/: data.json
res/battle/moves/odor_sleuth/: data.json
res/battle/moves/overheat/: data.json
res/battle/moves/parabolic_charge/: data.json
res/battle/moves/parting_shot/: data.json
res/battle/moves/petal_dance/: data.json
res/battle/moves/pin_missile/: data.json
res/battle/moves/poison_powder/: data.json
res/battle/moves/power_swap/: data.json
res/battle/moves/power_up_punch/: data.json
res/battle/moves/power_whip/: data.json
res/battle/moves/psychic_fangs/: data.json
res/battle/moves/psychic_noise/: data.json
res/battle/moves/psycho_boost/: data.json
res/battle/moves/psyshock/: data.json
res/battle/moves/quick_guard/: data.json
res/battle/moves/quiver_dance/: data.json
res/battle/moves/rage_powder/: data.json
res/battle/moves/razor_leaf/: data.json
res/battle/moves/razor_shell/: data.json
res/prebuilt/fielddata/: meson.build  scr_seq.narc
(+1900 files in other folders)
