pl_waza_tbl_subdirs = [
    '0000',
    '0468',
    '0469',
    '0470',
    'absorb',
    'accelerock',
    'acid',
    'acid_armor',
    'acid_spray',
    'acrobatics',
    'acupressure',
    'aerial_ace',
    'aeroblast',
    'after_you',
    'agility',
    'air_cutter',
    'air_slash',
    'amnesia',
    'ancient_power',
    'aqua_cutter',
    'aqua_jet',
    'aqua_ring',
    'aqua_tail',
    'arm_thrust',
    'armor_cannon',
    'aromatherapy',
    'assist',
    'assurance',
    'astonish',
    'attack_order',
    'attract',
    'aura_sphere',
    'aurora_beam',
    'avalanche',
    'barrage',
    'barrier',
    'baton_pass',
    'beat_up',
    'belch',
    'belly_drum',
    'bide',
    'bind',
    'bite',
    'blast_burn',
    'blaze_kick',
    'blizzard',
    'block',
    'body_press',
    'body_slam',
    'bone_club',
    'bone_rush',
    'bonemerang',
    'boomburst',
    'bounce',
    'brave_bird',
    'breaking_swipe',
    'brick_break',
    'brine',
    'bubble',
    'bubble_beam',
    'bug_bite',
    'bug_buzz',
    'bulk_up',
    'bulldoze',
    'bullet_punch',
    'bullet_seed',
    'calm_mind',
    'camouflage',
    'captivate',
    'charge',
    'charge_beam',
    'charm',
    'chatter',
    'chilling_water',
    'chilly_reception',
    'clamp',
    'clear_smog',
    'close_combat',
    'comet_punch',
    'confuse_ray',
    'confusion',
    'constrict',
    'conversion',
    'conversion_2',
    'copycat',
    'cosmic_power',
    'cotton_spore',
    'counter',
    'covet',
    'crabhammer',
    'cross_chop',
    'cross_poison',
    'crunch',
    'crush_claw',
    'crush_grip',
    'curse',
    'cut',
    'dark_pulse',
    'dark_void',
    'defend_order',
    'defense_curl',
    'defog',
    'destiny_bond',
    'detect',
    'dig',
    'disable',
    'discharge',
    'dive',
    'dizzy_punch',
    'doom_desire',
    'double_edge',
    'double_hit',
    'double_kick',
    'double_slap',
    'double_team',
    'draco_meteor',
    'dragon_breath',
    'dragon_claw',
    'dragon_dance',
    'dragon_darts',
    'dragon_pulse',
    'dragon_rage',
    'dragon_rush',
    'dragon_tail',
    'drain_punch',
    'dream_eater',
    'drill_peck',
    'drill_run',
    'dual_chop',
    'dual_wingbeat',
    'dynamic_punch',
    'earth_power',
    'earthquake',
    'egg_bomb',
    'electro_ball',
    'electro_shot',
    'electroweb',
    'embargo',
    'ember',
    'encore',
    'endeavor',
    'endure',
    'energy_ball',
    'entrainment',
    'eruption',
    'explosion',
    'extrasensory',
    'extreme_speed',
    'facade',
    'faint_attack',
    'fake_out',
    'fake_tears',
    'false_swipe',
    'feather_dance',
    'feint',
    'fire_blast',
    'fire_fang',
    'fire_lash',
    'fire_punch',
    'fire_spin',
    'first_impression',
    'fissure',
    'flail',
    'flame_charge',
    'flame_wheel',
    'flamethrower',
    'flare_blitz',
    'flash',
    'flash_cannon',
    'flatter',
    'fling',
    'flip_turn',
    'fly',
    'focus_blast',
    'focus_energy',
    'focus_punch',
    'follow_me',
    'force_palm',
    'foresight',
    'forests_curse',
    'foul_play',
    'freeze_dry',
    'frenzy_plant',
    'frost_breath',
    'frustration',
    'fury_attack',
    'fury_cutter',
    'fury_swipes',
    'future_sight',
    'gastro_acid',
    'giga_drain',
    'giga_impact',
    'glare',
    'grass_knot',
    'grass_whistle',
    'gravity',
    'growl',
    'growth',
    'grudge',
    'guard_swap',
    'guillotine',
    'gunk_shot',
    'gust',
    'gyro_ball',
    'hail',
    'hammer_arm',
    'harden',
    'haze',
    'head_smash',
    'headbutt',
    'headlong_rush',
    'heal_bell',
    'heal_block',
    'heal_order',
    'heal_pulse',
    'healing_wish',
    'heart_swap',
    'heat_wave',
    'heavy_slam',
    'helping_hand',
    'hex',
    'hi_jump_kick',
    'hidden_power',
    'high_horsepower',
    'horn_attack',
    'horn_drill',
    'howl',
    'hurricane',
    'hydro_cannon',
    'hydro_pump',
    'hyper_beam',
    'hyper_fang',
    'hyper_voice',
    'hypnosis',
    'ice_ball',
    'ice_beam',
    'ice_fang',
    'ice_hammer',
    'ice_punch',
    'ice_shard',
    'icicle_crash',
    'icicle_spear',
    'icy_wind',
    'imprison',
    'incinerate',
    'infestation',
    'ingrain',
    'iron_defense',
    'iron_head',
    'iron_tail',
    'jaw_lock',
    'judgment',
    'jump_kick',
    'karate_chop',
    'kinesis',
    'knock_off',
    'last_resort',
    'lava_plume',
    'leaf_blade',
    'leaf_storm',
    'leech_life',
    'leech_seed',
    'leer',
    'lick',
    'life_dew',
    'light_screen',
    'liquidation',
    'lock_on',
    'lovely_kiss',
    'low_kick',
    'low_sweep',
    'lucky_chant',
    'lunar_dance',
    'luster_purge',
    'mach_punch',
    'magic_coat',
    'magic_powder',
    'magical_leaf',
    'magma_storm',
    'magnet_bomb',
    'magnet_rise',
    'magnitude',
    'mat_block',
    'me_first',
    'mean_look',
    'meditate',
    'mega_drain',
    'mega_kick',
    'mega_punch',
    'megahorn',
    'memento',
    'metal_burst',
    'metal_claw',
    'metal_sound',
    'meteor_beam',
    'meteor_mash',
    'metronome',
    'milk_drink',
    'mimic',
    'mind_reader',
    'minimize',
    'miracle_eye',
    'mirror_coat',
    'mirror_move',
    'mirror_shot',
    'mist',
    'mist_ball',
    'moonlight',
    'morning_sun',
    'mud_bomb',
    'mud_shot',
    'mud_slap',
    'mud_sport',
    'muddy_water',
    'mystical_fire',
    'nasty_plot',
    'natural_gift',
    'nature_power',
    'needle_arm',
    'night_shade',
    'night_slash',
    'nightmare',
    'nuzzle',
    'octazooka',
    'odor_sleuth',
    'ominous_wind',
    'outrage',
    'overheat',
    'pain_split',
    'parabolic_charge',
    'parting_shot',
    'pay_day',
    'payback',
    'peck',
    'perish_song',
    'petal_dance',
    'pin_missile',
    'pluck',
    'poison_fang',
    'poison_gas',
    'poison_jab',
    'poison_powder',
    'poison_sting',
    'poison_tail',
    'pound',
    'powder_snow',
    'power_gem',
    'power_swap',
    'power_trick',
    'power_up_punch',
    'power_whip',
    'present',
    'protect',
    'psybeam',
    'psych_up',
    'psychic',
    'psychic_fangs',
    'psychic_noise',
    'psycho_boost',
    'psycho_cut',
    'psycho_shift',
    'psyshock',
    'psywave',
    'punishment',
    'pursuit',
    'quick_attack',
    'quick_guard',
    'quiver_dance',
    'rage',
    'rage_powder',
    'rain_dance',
    'rapid_spin',
    'razor_leaf',
    'razor_shell',
    'razor_wind',
    'recover',
    'recycle',
    'reflect',
    'refresh',
    'rest',
    'return',
    'revenge',
    'reversal',
    'roar',
    'roar_of_time',
    'rock_blast',
    'rock_climb',
    'rock_polish',
    'rock_slide',
    'rock_smash',
    'rock_throw',
    'rock_tomb',
    'rock_wrecker',
    'role_play',
    'rolling_kick',
    'rollout',
    'roost',
    'sacred_fire',
    'safeguard',
    'sand_attack',
    'sand_tomb',
    'sandstorm',
    'scald',
    'scale_shot',
    'scary_face',
    'scorching_sands',
    'scratch',
    'screech',
    'secret_power',
    'seed_bomb',
    'seed_flare',
    'seismic_toss',
    'selfdestruct',
    'shadow_ball',
    'shadow_claw',
    'shadow_force',
    'shadow_punch',
    'shadow_sneak',
    'sharpen',
    'sheer_cold',
    'shell_smash',
    'shock_wave',
    'signal_beam',
    'silk_trap',
    'silver_wind',
    'sing',
    'sketch',
    'skill_swap',
    'skull_bash',
    'sky_attack',
    'sky_uppercut',
    'slack_off',
    'slam',
    'slash',
    'sleep_powder',
    'sleep_talk',
    'sludge',
    'sludge_bomb',
    'sludge_wave',
    'smelling_salt',
    'smog',
    'smoke_screen',
    'snatch',
    'snore',
    'softboiled',
    'solar_beam',
    'solar_blade',
    'sonic_boom',
    'spacial_rend',
    'spark',
    'speed_swap',
    'spider_web',
    'spike_cannon',
    'spikes',
    'spiky_shield',
    'spit_up',
    'spite',
    'splash',
    'spore',
    'spotlight',
    'stealth_rock',
    'steel_beam',
    'steel_wing',
    'sticky_web',
    'stockpile',
    'stomp',
    'stone_edge',
    'stored_power',
    'strength',
    'string_shot',
    'struggle',
    'struggle_bug',
    'stun_spore',
    'submission',
    'substitute',
    'sucker_punch',
    'sunny_day',
    'super_fang',
    'superpower',
    'supersonic',
    'surf',
    'surging_strikes',
    'swagger',
    'swallow',
    'sweet_kiss',
    'sweet_scent',
    'swift',
    'switcheroo',
    'swords_dance',
    'synthesis',
    'tackle',
    'tail_glow',
    'tail_slap',
    'tail_whip',
    'tailwind',
    'take_down',
    'taunt',
    'teeter_dance',
    'teleport',
    'thief',
    'thrash',
    'throat_chop',
    'thunder',
    'thunder_fang',
    'thunder_punch',
    'thunder_shock',
    'thunder_wave',
    'thunderbolt',
    'thunderclap',
    'tickle',
    'torment',
    'toxic',
    'toxic_spikes',
    'trailblaze',
    'transform',
    'tri_attack',
    'trick',
    'trick_or_treat',
    'trick_room',
    'triple_axel',
    'triple_kick',
    'trump_card',
    'twineedle',
    'twister',
    'u_turn',
    'uproar',
    'vacuum_wave',
    'venoshock',
    'vice_grip',
    'vine_whip',
    'vital_throw',
    'volt_switch',
    'volt_tackle',
    'wake_up_slap',
    'water_gun',
    'water_pulse',
    'water_sport',
    'water_spout',
    'waterfall',
    'wave_crash',
    'weather_ball',
    'whirlpool',
    'whirlwind',
    'wicked_blow',
    'wide_guard',
    'wild_charge',
    'will_o_wisp',
    'wing_attack',
    'wish',
    'withdraw',
    'wood_hammer',
    'worry_seed',
    'wrap',
    'wring_out',
    'x_scissor',
    'yawn',
    'zap_cannon',
    'zen_headbutt',
]

pl_waza_tbl_data_srcs = []
foreach subdir : pl_waza_tbl_subdirs
    pl_waza_tbl_data_srcs += subdir / 'data.json'
endforeach

pl_waza_tbl_narc = custom_target('pl_waza_tbl.narc',
    output: 'pl_waza_tbl.narc',
    input: pl_waza_tbl_data_srcs,
    env: json2bin_env,
    depends: [ py_consts_generators ],
    command: [
        movedata_py,
        '--narc', narc_exe,
        '--source-dir', '@CURRENT_SOURCE_DIR@',
        '--private-dir', '@PRIVATE_DIR@',
        '--output-dir', '@OUTDIR@',
    ]
)

nitrofs_files += pl_waza_tbl_narc
